NEWS for package xlsx

Changes in version 0.5.1 (released 2012-xx-xx)

 o Fix Issue 9. 

 o TODO:  Fix bug in read.xlsx2 when user asks for colType "factor".
 The assignment "class(aux) <- colClasses[i]" in readColumns returns
 the error: "adding class "factor" to an invalid object" Strange.
 Reported by Benjamin Caldwell.

 o TODO: Make sure you remove the .settings, etc. folders before
 submitting to cran


Changes in version 0.5.0 (released 2012-09-23)

 o New functionality: Introduce the concept of CellBlock to allow
 faster writes/updates of cell blocks.  Writing a spreadsheet is
 now +50% faster for medium sized spreadsheets compared to version
 0.4.2.  This functionality allows you to style a block of cells much
 easier than before.  Thanks to Alexey Stukalov for his significant
 contribution on the Java side and for the original impetus.

 o Absolute paths are no longer needed for saveWorkbook and friends.
 Reported by Mike Cheetham.

 o Functions write.xlsx, write.xlsx2 now allow you to create xls
 documents too.  Previous versions only allowed xlsx documents. 

 o Bug fix: read.xlsx2 doesn't read an extra empty column anymore.
 Also colClasses were not mapped correctly to the corresponding
 colIndex. 

 o Deprecated: getMatrixValues.  Use the readColumns function instead.  


Changes in version 0.4.2 (released 2012-02-08)

 o New function readRows() similar to readColumns() for reading
   accross the columns. 

 o Removed a stray browser() in function .guess_cell_type


Changes in version 0.4.1 (released 2012-01-22)

 o Added a test for file existence in loadWorkbook.  If file does not
   exist, the error message from read.xlsx, read.xlsx2 and
   loadWorkbook is now more informative.  Also added path expansion in
   file names. (Suggested by Dirk Eddelbuettel.)

 o Fixed bug in addDataFrame to allow it to add a df to existing
   sheets, not only to new sheets. 


Changes in version 0.4.0 (released 2012-01-15)
