@@ -1,6 +1,5 @@
 package org.cran.rexcel;
 
-import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 
